--- a/index.html
+++ b/index.html
@@ -15,73 +15,60 @@
   <style>
     :root{
       --page:#ffffff; --ink:#202124; --muted:#6b7280; --border:#e5e7eb; --chip:#eef2f7;
-      --pending:#FFD8A8;   /* 0% */
-      --doing:#EDE8D0;     /* in-progress base */
-      --done:#008000;      /* 100% */
-      --done-base:#E8F5EA; /* base for completed */
+      --pending:#FFD8A8;     /* 0% */
+      --doing:#EDE8D0;       /* in-progress base (light ash) */
+      --done:#008000;        /* 100% */
+      --done-base:#E8F5EA;   /* soft green base under 100% */
     }
 
     html,body{height:100%}
     body{
-      margin:0; background:var(--page); color:var(--ink);
-      font:15px/1.5 Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial;
-      display:flex; flex-direction:column;
+      margin:0;background:var(--page);color:var(--ink);
+      font:15px/1.5 Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      display:flex;flex-direction:column
     }
 
-    .topbar{
-      display:flex; gap:12px; align-items:center; justify-content:space-between; flex-wrap:wrap;
-      padding:14px 16px; border-bottom:1px solid var(--border);
-    }
-    .brand{display:flex; gap:10px; align-items:center}
-    .dot{width:10px; height:10px; border-radius:50%; background:#cc0000}
-    .title{font-weight:700; font-size:18px}
-    .hint{color:var(--muted); font-size:12px}
-    .controls{display:flex; gap:8px; flex-wrap:wrap}
-    .controls>*{background:var(--chip); border:1px solid var(--border); border-radius:12px; padding:8px 12px; cursor:pointer}
+    .top{display:flex;justify-content:space-between;gap:12px;align-items:center;padding:14px 16px;border-bottom:1px solid var(--border)}
+    .brand{font-weight:700;font-size:18px}
+    .hint{color:var(--muted);font-size:12px}
+    .controls{display:flex;gap:8px;flex-wrap:wrap}
+    .controls>*{background:var(--chip);border:1px solid var(--border);border-radius:12px;padding:8px 12px;cursor:pointer}
 
-    /* main stage */
-    #stage{flex:1 1 auto; min-height:0; padding:12px}
+    #stage{flex:1 1 auto;min-height:0;padding:12px}
     #gantt{
-      height:100%; width:100%;
-      background:#fff; border:1px solid var(--border); border-radius:12px;
-      overflow:auto;              /* allow horizontal scroll if needed */
+      height:100%;width:100%;background:#fff;border:1px solid var(--border);border-radius:12px;
+      overflow:auto
     }
 
-    /* legend */
-    .legend{display:flex; gap:18px; align-items:center; color:var(--muted); font-size:13px; padding:10px 14px}
-    .sw{width:14px; height:14px; border-radius:3px; display:inline-block; margin-right:6px; border:1px solid #d1d5db}
+    .legend{display:flex;gap:18px;align-items:center;color:var(--muted);font-size:13px;padding:10px 14px}
+    .sw{width:14px;height:14px;border-radius:3px;display:inline-block;margin-right:6px;border:1px solid #d1d5db}
     .sw.pending{background:var(--pending)}
     .sw.doing{background:var(--doing)}
     .sw.done{background:var(--done)}
 
-    /* bar aesthetics */
-    #gantt svg .bar{stroke-width:.2; cursor:pointer}
-    .gantt .bar-label{stroke:none; font-weight:600; fill:#374151; font-size:12px}
+    /* Remove Frappe default purple ASAP */
+    #gantt .bar{ fill: var(--doing) !important; }
+    #gantt .bar-progress{ fill: var(--doing) !important; }
 
-    /* set base fills via classes (we still recolor progress below) */
-    .gantt .bar-wrapper.is-todo  .bar{fill:var(--pending)!important}
-    .gantt .bar-wrapper.is-doing .bar{fill:var(--doing)!important}
-    .gantt .bar-wrapper.is-done  .bar{fill:var(--done-base)!important}
+    /* State bases (JS still adjusts progress overlay) */
+    #gantt .bar-wrapper.is-todo  .bar{ fill: var(--pending)   !important; }
+    #gantt .bar-wrapper.is-doing .bar{ fill: var(--doing)    !important; }
+    #gantt .bar-wrapper.is-done  .bar{ fill: var(--done-base)!important; }
 
-    /* tooltip */
+    .gantt .bar-label{stroke:none;font-weight:600;fill:#374151;font-size:12px}
+
     .tooltip{
-      position:absolute; background:#fff; border:1px solid var(--border);
-      padding:8px 10px; border-radius:8px; box-shadow:0 10px 28px rgba(0,0,0,.12);
-      font-size:13px; display:none; pointer-events:none; z-index:9999; max-width:340px
+      position:absolute;background:#fff;border:1px solid var(--border);
+      padding:8px 10px;border-radius:8px;box-shadow:0 10px 28px rgba(0,0,0,.12);
+      font-size:13px;display:none;pointer-events:none;z-index:9999;max-width:340px
     }
-
-    /* soft error strip */
-    .err{margin:8px 16px; color:#b00020; font-size:13px; display:none}
   </style>
 </head>
 <body>
-  <div class="topbar">
-    <div class="brand">
-      <div class="dot" title="Realtime"></div>
-      <div>
-        <div class="title">UDP Programme Comms Dashboard</div>
-        <div class="hint">Comms Focal: Abu Nayeem Md Shakib</div>
-      </div>
+  <div class="top">
+    <div>
+      <div class="brand">UDP Programme Comms Dashboard</div>
+      <div class="hint">Comms Focal: Abu Nayeem Md Shakib</div>
     </div>
     <div class="controls">
       <select id="monthSelect"></select>
@@ -99,72 +86,62 @@
     <span><span class="sw doing"></span>In progress</span>
     <span><span class="sw done"></span>Completed (100%)</span>
   </div>
-  <div id="err" class="err"></div>
 
   <div id="tooltip" class="tooltip"></div>
 
   <script>
-    // === Supabase config (yours) ===
+    /* ===== Supabase config (yours) ===== */
     const SUPABASE_URL = "https://wjfgntocqjtwaqamlbgc.supabase.co";
     const SUPABASE_ANON_KEY =
       "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-    const state = { view: "Week", monthKey: keyFromDate(new Date()) };
+    const state = { view: 'Week', monthKey: keyFromDate(new Date()) };
     let gantt, tasksCache = [];
 
-    // Boot
     init();
-    async function init() {
+
+    async function init(){
       buildMonthPicker();
       await render();
-      subscribeRealtime();
       bindControls();
+      subscribeRealtime();
     }
 
-    // Controls
-    function bindControls() {
+    function bindControls(){
       monthSelect.onchange = () => { state.monthKey = monthSelect.value; render(); };
-      viewDay.onclick    = () => setView("Day");
-      viewWeek.onclick   = () => setView("Week");
-      viewMonth.onclick  = () => setView("Month");
+      viewDay.onclick    = () => setView('Day');
+      viewWeek.onclick   = () => setView('Week');
+      viewMonth.onclick  = () => setView('Month');
       refreshBtn.onclick = () => render();
-      window.addEventListener("resize", () => { if (gantt) gantt.refresh(); });
     }
     function setView(v){ state.view = v; if(gantt) gantt.change_view_mode(v); }
 
-    // Month picker
     function buildMonthPicker(){
-      const base = new Date(); base.setDate(1);
-      monthSelect.innerHTML = "";
+      const base = new Date(); base.setDate(1); monthSelect.innerHTML='';
       for(let o=-2;o<=9;o++){
-        const d = new Date(base); d.setMonth(d.getMonth()+o);
-        const key = keyFromDate(d);
-        const opt = document.createElement("option");
-        opt.value = key;
-        opt.textContent = d.toLocaleString(undefined,{month:"long",year:"numeric"});
-        if(key===state.monthKey) opt.selected = true;
+        const d=new Date(base); d.setMonth(d.getMonth()+o);
+        const key=keyFromDate(d);
+        const opt=document.createElement('option');
+        opt.value=key;
+        opt.textContent=d.toLocaleString(undefined,{month:'long',year:'numeric'});
+        if(key===state.monthKey) opt.selected=true;
         monthSelect.appendChild(opt);
       }
     }
-    function keyFromDate(d){ return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,"0")}`; }
-    function monthRangeFromKey(key){ const [y,m]=key.split("-").map(Number); return { start:new Date(y,m-1,1), end:new Date(y,m,0,23,59,59,999) }; }
-
-    // Data
-    async function fetchTasks(){
-      const { data, error } = await supabase
-        .from("tasks")
-        .select("*")
-        .order("start_date",{ascending:true});
-
-      if(error){ showErr(`Supabase error: ${error.message}`); return []; }
-      const { start, end } = monthRangeFromKey(state.monthKey);
-      hideErr();
-      return (data||[]).filter(t => new Date(t.end_date||t.start_date) >= start
-                                 && new Date(t.start_date) <= end);
+    function keyFromDate(d){ return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`; }
+    function monthRangeFromKey(key){
+      const [y,m]=key.split('-').map(Number);
+      return { start:new Date(y,m-1,1), end:new Date(y,m,0,23,59,59,999) };
     }
 
-    // Render
+    async function fetchTasks(){
+      const { data, error } = await supabase.from('tasks').select('*').order('start_date',{ascending:true});
+      if(error){ console.error(error); return []; }
+      const { start, end } = monthRangeFromKey(state.monthKey);
+      return (data||[]).filter(t => new Date(t.end_date||t.start_date)>=start && new Date(t.start_date)<=end);
+    }
+
     async function render(){
       const rows = await fetchTasks();
       tasksCache = rows.map(r => ({
@@ -173,97 +150,89 @@
         start: toYMD(r.start_date),
         end: toYMD(r.end_date || r.start_date),
         progress: Number(r.progress || 0),
-        dependencies: (r.dependencies || "").trim(),
-        notes: r.notes || "",
-        custom_class:
-          Number(r.progress||0) >= 100 ? "is-done" :
-          Number(r.progress||0) > 0   ? "is-doing" : "is-todo"
+        dependencies: (r.dependencies || '').trim(),
+        notes: r.notes || '',
+        custom_class: (Number(r.progress||0) === 0) ? 'is-todo' : (Number(r.progress||0) >= 100 ? 'is-done' : 'is-doing')
       }));
 
-      document.getElementById("gantt").innerHTML = "";
-      gantt = new Gantt("#gantt", tasksCache, {
+      document.getElementById('gantt').innerHTML='';
+      gantt = new Gantt('#gantt', tasksCache, {
         view_mode: state.view,
-        date_format: "YYYY-MM-DD",
-        language: "en"
+        date_format: 'YYYY-MM-DD',
+        language:'en'
       });
 
-      colorBars();
-      attachTooltips();
+      paintBars();
+      attachTooltip();
     }
 
-    // Colors
-    function colorBars(){
-      document.querySelectorAll("#gantt .bar-wrapper").forEach(w => {
-        const id = w.getAttribute("data-id");
-        const t = tasksCache.find(x => String(x.id) === String(id));
-        if(!t) return;
-        const bar  = w.querySelector(".bar");
-        const prog = w.querySelector(".bar-progress");
+    function paintBars(){
+      tasksCache.forEach(t => {
+        const wrap = document.querySelector(`#gantt .bar-wrapper[data-id="${t.id}"]`);
+        if(!wrap) return;
+        const bar  = wrap.querySelector('.bar');
+        const prog = wrap.querySelector('.bar-progress');
         if(!bar || !prog) return;
 
         const p = Math.max(0, Math.min(100, Number(t.progress||0)));
 
-        // completed
-        if(p >= 100){
-          bar.setAttribute("fill", getCSS("--done-base"));
-          prog.setAttribute("fill", getCSS("--done"));
-          return;
-        }
-        // pending
         if(p === 0){
-          bar.setAttribute("fill", getCSS("--pending"));
-          prog.setAttribute("fill", "rgba(0,0,0,0)");
+          bar.setAttribute('fill', getCSS('--pending'));
+          prog.setAttribute('fill','rgba(0,0,0,0)');
           return;
         }
-        // in progress: beige overlay that deepens with % (warm ramp)
-        bar.setAttribute("fill", getCSS("--doing"));
-        prog.setAttribute("fill", beigeRamp(p));
+        if(p >= 100){
+          bar.setAttribute('fill', getCSS('--done-base'));
+          prog.setAttribute('fill', getCSS('--done'));
+          return;
+        }
+        // In progress: base ash + progressive beige overlay
+        bar.setAttribute('fill', getCSS('--doing'));
+        prog.setAttribute('fill', beigeRamp(p));
       });
     }
 
-    // Hover tooltip
-    function attachTooltips(){
-      const tip = document.getElementById("tooltip");
-      document.querySelectorAll("#gantt .bar-wrapper").forEach(w => {
-        w.onmouseenter = () => {
-          const id = w.getAttribute("data-id");
-          const t = tasksCache.find(x => String(x.id) === String(id));
-          if(!t) return;
-          tip.innerHTML = `<strong>${escapeHtml(t.name)}</strong><br>${t.start} → ${t.end}<br>${t.progress}%${t.notes?`<br>${escapeHtml(t.notes)}`:""}`;
-          tip.style.display = "block";
-        };
-        w.onmousemove = e => { tip.style.left = (e.pageX+12)+"px"; tip.style.top = (e.pageY-20)+"px"; };
-        w.onmouseleave = () => { tip.style.display = "none"; };
-      });
-    }
-
-    // Beige ramp for progress overlay
+    // Warm beige gradient that deepens with progress %
     function beigeRamp(p){
-      const h = 38, s = 45;    // warm tone
-      const lStart = 92;       // very light
-      const lEnd   = 58;       // deeper
+      const h = 38, s = 40;      // warm hue
+      const lStart = 92, lEnd = 58;
       const l = lStart + (lEnd - lStart) * (p/100);
       return `hsl(${h}, ${s}%, ${l}%)`;
     }
 
-    // Realtime
+    function attachTooltip(){
+      const tip = document.getElementById('tooltip');
+      document.querySelectorAll('#gantt .bar-wrapper').forEach(w => {
+        w.onmouseenter = () => {
+          const id = w.getAttribute('data-id');
+          const t = tasksCache.find(x => String(x.id) === String(id));
+          if(!t) return;
+          tip.innerHTML = `<strong>${escapeHtml(t.name)}</strong><br>${t.start} → ${t.end}<br>${t.progress}%${t.notes?`<br>${escapeHtml(t.notes)}`:''}`;
+          tip.style.display = 'block';
+        };
+        w.onmousemove = e => { tip.style.left = (e.pageX+12)+'px'; tip.style.top = (e.pageY-20)+'px'; };
+        w.onmouseleave = () => { tip.style.display = 'none'; };
+      });
+    }
+
     function subscribeRealtime(){
-      supabase.channel("public:tasks")
-        .on("postgres_changes",{event:"*", schema:"public", table:"tasks"}, debounce(()=>{ render(); }, 300))
+      supabase.channel('public:tasks')
+        .on('postgres_changes',{event:'*',schema:'public',table:'tasks'}, () => { render(); })
         .subscribe();
     }
 
-    // Utils
-    function toYMD(d){ const x=new Date(d); return `${x.getFullYear()}-${String(x.getMonth()+1).padStart(2,"0")}-${String(x.getDate()).padStart(2,"0")}`; }
+    // utils
+    function toYMD(d){ const x=new Date(d); return `${x.getFullYear()}-${String(x.getMonth()+1).padStart(2,'0')}-${String(x.getDate()).padStart(2,'0')}`; }
+    function getCSS(v){ return getComputedStyle(document.documentElement).getPropertyValue(v).trim(); }
     function escapeHtml(s){
       return String(s).replace(/[&<>"']/g, (c) => ({
-        "&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"
+        '&': '&amp;',
+        '<': '&lt;',
+        '>': '&gt;',
+        '"': '&quot;',
+        "'": '&#39;'
       })[c]);
     }
-    function getCSS(v){ return getComputedStyle(document.documentElement).getPropertyValue(v).trim(); }
-    function debounce(fn,wait){ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn.apply(this,a),wait); }; }
-    function showErr(msg){ const el=document.getElementById("err"); el.textContent=msg; el.style.display="block"; }
-    function hideErr(){ const el=document.getElementById("err"); el.style.display="none"; }
   </script>
 </body>
 </html>
