--- a/index.html
+++ b/index.html
@@ -5,28 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>UDP Programme Comms Dashboard</title>
 
-  <!-- Frappe Gantt -->
   <link rel="stylesheet" href="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.css" />
   <script src="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.min.js"></script>
-
-  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <style>
     :root{
       --page:#ffffff; --ink:#202124; --muted:#6b7280; --border:#e5e7eb; --chip:#eef2f7;
-      --pending:#FFD8A8;     /* 0% */
-      --doing:#EDE8D0;       /* in-progress base (light ash) */
-      --done:#008000;        /* 100% */
-      --done-base:#E8F5EA;   /* soft green base under 100% */
+      --pending:#FFD8A8;    /* 0% */
+      --doing:#EDE8D0;      /* in-progress base (light ash) */
+      --done:#008000;       /* 100% */
+      --done-base:#E8F5EA;  /* soft green base under 100% */
     }
 
     html,body{height:100%}
-    body{
-      margin:0;background:var(--page);color:var(--ink);
-      font:15px/1.5 Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;
-      display:flex;flex-direction:column
-    }
+    body{margin:0;background:var(--page);color:var(--ink);font:15px/1.5 Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;display:flex;flex-direction:column}
 
     .top{display:flex;justify-content:space-between;gap:12px;align-items:center;padding:14px 16px;border-bottom:1px solid var(--border)}
     .brand{font-weight:700;font-size:18px}
@@ -35,10 +28,7 @@
     .controls>*{background:var(--chip);border:1px solid var(--border);border-radius:12px;padding:8px 12px;cursor:pointer}
 
     #stage{flex:1 1 auto;min-height:0;padding:12px}
-    #gantt{
-      height:100%;width:100%;background:#fff;border:1px solid var(--border);border-radius:12px;
-      overflow:auto
-    }
+    #gantt{height:100%;width:100%;background:#fff;border:1px solid var(--border);border-radius:12px;overflow:auto}
 
     .legend{display:flex;gap:18px;align-items:center;color:var(--muted);font-size:13px;padding:10px 14px}
     .sw{width:14px;height:14px;border-radius:3px;display:inline-block;margin-right:6px;border:1px solid #d1d5db}
@@ -46,22 +36,13 @@
     .sw.doing{background:var(--doing)}
     .sw.done{background:var(--done)}
 
-    /* Remove Frappe default purple ASAP */
-    #gantt .bar{ fill: var(--doing) !important; }
-    #gantt .bar-progress{ fill: var(--doing) !important; }
-
-    /* State bases (JS still adjusts progress overlay) */
-    #gantt .bar-wrapper.is-todo  .bar{ fill: var(--pending)   !important; }
-    #gantt .bar-wrapper.is-doing .bar{ fill: var(--doing)    !important; }
-    #gantt .bar-wrapper.is-done  .bar{ fill: var(--done-base)!important; }
+    /* State base colors (no !important so JS can override) */
+    #gantt .bar-wrapper.is-todo  .bar{ fill: var(--pending); }
+    #gantt .bar-wrapper.is-doing .bar{ fill: var(--doing); }
+    #gantt .bar-wrapper.is-done  .bar{ fill: var(--done-base); }
 
     .gantt .bar-label{stroke:none;font-weight:600;fill:#374151;font-size:12px}
-
-    .tooltip{
-      position:absolute;background:#fff;border:1px solid var(--border);
-      padding:8px 10px;border-radius:8px;box-shadow:0 10px 28px rgba(0,0,0,.12);
-      font-size:13px;display:none;pointer-events:none;z-index:9999;max-width:340px
-    }
+    .tooltip{position:absolute;background:#fff;border:1px solid var(--border);padding:8px 10px;border-radius:8px;box-shadow:0 10px 28px rgba(0,0,0,.12);font-size:13px;display:none;pointer-events:none;z-index:9999;max-width:340px}
   </style>
 </head>
 <body>
@@ -90,7 +71,6 @@
   <div id="tooltip" class="tooltip"></div>
 
   <script>
-    /* ===== Supabase config (yours) ===== */
     const SUPABASE_URL = "https://wjfgntocqjtwaqamlbgc.supabase.co";
     const SUPABASE_ANON_KEY =
       "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
