--- a/index.html
+++ b/index.html
@@ -5,21 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>UDP Programme Comms Dashboard</title>
 
+  <!-- Frappe Gantt -->
   <link rel="stylesheet" href="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.css" />
   <script src="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.min.js"></script>
+
+  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <style>
     :root{
       --page:#ffffff; --ink:#202124; --muted:#6b7280; --border:#e5e7eb; --chip:#eef2f7;
-      --pending:#FFD8A8;    /* 0% */
-      --doing:#EDE8D0;      /* in-progress base (light ash) */
-      --done:#008000;       /* 100% */
-      --done-base:#E8F5EA;  /* soft green base under 100% */
+      /* Palette */
+      --pending:#FFD8A8;    
+      --doing:#EDE8D0;      
+      --done:#008000;       
+      --done-base:#E8F5EA;  
     }
 
     html,body{height:100%}
-    body{margin:0;background:var(--page);color:var(--ink);font:15px/1.5 Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;display:flex;flex-direction:column}
+    body{
+      margin:0;background:var(--page);color:var(--ink);
+      font:15px/1.5 Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      display:flex;flex-direction:column
+    }
 
     .top{display:flex;justify-content:space-between;gap:12px;align-items:center;padding:14px 16px;border-bottom:1px solid var(--border)}
     .brand{font-weight:700;font-size:18px}
@@ -28,7 +36,11 @@
     .controls>*{background:var(--chip);border:1px solid var(--border);border-radius:12px;padding:8px 12px;cursor:pointer}
 
     #stage{flex:1 1 auto;min-height:0;padding:12px}
-    #gantt{height:100%;width:100%;background:#fff;border:1px solid var(--border);border-radius:12px;overflow:auto}
+    #gantt{
+      height:100%;width:100%;
+      background:#fff;border:1px solid var(--border);border-radius:12px;
+      overflow:auto
+    }
 
     .legend{display:flex;gap:18px;align-items:center;color:var(--muted);font-size:13px;padding:10px 14px}
     .sw{width:14px;height:14px;border-radius:3px;display:inline-block;margin-right:6px;border:1px solid #d1d5db}
@@ -36,13 +48,17 @@
     .sw.doing{background:var(--doing)}
     .sw.done{background:var(--done)}
 
-    /* State base colors (no !important so JS can override) */
-    #gantt .bar-wrapper.is-todo  .bar{ fill: var(--pending); }
-    #gantt .bar-wrapper.is-doing .bar{ fill: var(--doing); }
-    #gantt .bar-wrapper.is-done  .bar{ fill: var(--done-base); }
+    /* Thicker immersive bars */
+    #gantt .bar{ height:28px; rx:6px; ry:6px; }
+    #gantt .bar-progress{ height:28px; rx:6px; ry:6px; }
+    #gantt .bar-wrapper{ transform: translateY(6px); } /* vertical padding */
+    .gantt .bar-label{stroke:none;font-weight:700;fill:#111827;font-size:14px}
 
-    .gantt .bar-label{stroke:none;font-weight:600;fill:#374151;font-size:12px}
-    .tooltip{position:absolute;background:#fff;border:1px solid var(--border);padding:8px 10px;border-radius:8px;box-shadow:0 10px 28px rgba(0,0,0,.12);font-size:13px;display:none;pointer-events:none;z-index:9999;max-width:340px}
+    .tooltip{
+      position:absolute;background:#fff;border:1px solid var(--border);
+      padding:8px 10px;border-radius:8px;box-shadow:0 10px 28px rgba(0,0,0,.12);
+      font-size:13px;display:none;pointer-events:none;z-index:9999;max-width:340px
+    }
   </style>
 </head>
 <body>
@@ -132,7 +148,6 @@
         progress: Number(r.progress || 0),
         dependencies: (r.dependencies || '').trim(),
         notes: r.notes || '',
-        custom_class: (Number(r.progress||0) === 0) ? 'is-todo' : (Number(r.progress||0) >= 100 ? 'is-done' : 'is-doing')
       }));
 
       document.getElementById('gantt').innerHTML='';
@@ -166,16 +181,15 @@
           prog.setAttribute('fill', getCSS('--done'));
           return;
         }
-        // In progress: base ash + progressive beige overlay
+
         bar.setAttribute('fill', getCSS('--doing'));
         prog.setAttribute('fill', beigeRamp(p));
       });
     }
 
-    // Warm beige gradient that deepens with progress %
     function beigeRamp(p){
-      const h = 38, s = 40;      // warm hue
-      const lStart = 92, lEnd = 58;
+      const h = 38, s = 60; 
+      const lStart = 92, lEnd = 45;
       const l = lStart + (lEnd - lStart) * (p/100);
       return `hsl(${h}, ${s}%, ${l}%)`;
     }
@@ -206,11 +220,7 @@
     function getCSS(v){ return getComputedStyle(document.documentElement).getPropertyValue(v).trim(); }
     function escapeHtml(s){
       return String(s).replace(/[&<>"']/g, (c) => ({
-        '&': '&amp;',
-        '<': '&lt;',
-        '>': '&gt;',
-        '"': '&quot;',
-        "'": '&#39;'
+        '&': '&amp;','<': '&lt;','>': '&gt;','"': '&quot;',"'": '&#39;'
       })[c]);
     }
   </script>
