--- a/index.html
+++ b/index.html
@@ -4,91 +4,58 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>UDP Programme Comms Dashboard</title>
-
-  <!-- Frappe Gantt -->
   <link rel="stylesheet" href="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.css" />
   <script src="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.min.js"></script>
-
-  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
   <style>
-    :root{
-      --page:#ffffff; --ink:#202124; --muted:#6b7280; --border:#e5e7eb; --chip:#eef2f7;
-      --pending:#FFD8A8;    /* 0% */
-      --doing:#EDE8D0;      /* in-progress base */
-      --done:#008000;       /* 100% */
-      --done-base:#E8F5EA;  /* soft green base for completed */
+    :root {
+      --pending: #FFD8A8;   /* Pending (0%) */
+      --doing: #EDE8D0;     /* In progress base */
+      --done: #008000;      /* Completed overlay */
+      --done-base: #E8F5EA; /* Completed base */
     }
-
-    html,body{height:100%}
-    body{
-      margin:0;background:var(--page);color:var(--ink);
-      font:15px/1.5 Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;
-      display:flex;flex-direction:column
-    }
-
-    .top{display:flex;justify-content:space-between;gap:12px;align-items:center;padding:14px 16px;border-bottom:1px solid var(--border)}
-    .brand{font-weight:700;font-size:18px}
-    .hint{color:var(--muted);font-size:12px}
-    .controls{display:flex;gap:8px;flex-wrap:wrap}
-    .controls>*{background:var(--chip);border:1px solid var(--border);border-radius:12px;padding:8px 12px;cursor:pointer}
-
-    #stage{flex:1 1 auto;min-height:0;padding:12px}
-    #gantt{height:100%;width:100%;background:#fff;border:1px solid var(--border);border-radius:12px;overflow:auto}
-
-    .legend{display:flex;gap:18px;align-items:center;color:var(--muted);font-size:13px;padding:10px 14px}
-    .sw{width:14px;height:14px;border-radius:3px;display:inline-block;margin-right:6px;border:1px solid #d1d5db}
-    .sw.pending{background:var(--pending)}
-    .sw.doing{background:var(--doing)}
-    .sw.done{background:var(--done)}
-
-    /* Chunkier bars */
-    #gantt .bar, #gantt .bar-progress{ height:26px; rx:6px; ry:6px; }
-    #gantt .bar-wrapper{ transform: translateY(6px); } /* vertical spacing */
-    .gantt .bar-label{stroke:none;font-weight:700;fill:#111827;font-size:14px}
-
-    .tooltip{
-      position:absolute;background:#fff;border:1px solid var(--border);
-      padding:8px 10px;border-radius:8px;box-shadow:0 10px 28px rgba(0,0,0,.12);
-      font-size:13px;display:none;pointer-events:none;z-index:9999;max-width:340px
-    }
+    body { margin:0; font-family: Inter, sans-serif; background:#fff; color:#202124; }
+    .wrap { padding:16px; height:100vh; display:flex; flex-direction:column; }
+    .topbar { display:flex; justify-content:space-between; align-items:center; margin-bottom:12px; }
+    .brand { font-weight:700; font-size:18px; }
+    .card { flex:1; background:#fafafa; border:1px solid #eee; border-radius:12px; padding:12px; display:flex; flex-direction:column; }
+    #gantt { flex:1; border:1px solid #eee; border-radius:8px; }
+    .legend { margin-top:8px; font-size:13px; color:#555; display:flex; gap:18px; }
+    .sw { width:12px; height:12px; display:inline-block; border-radius:3px; margin-right:4px; }
+    .sw.pending { background: var(--pending); }
+    .sw.doing { background: var(--doing); }
+    .sw.done { background: var(--done); }
   </style>
 </head>
 <body>
-  <div class="top">
-    <div>
+  <div class="wrap">
+    <div class="topbar">
       <div class="brand">UDP Programme Comms Dashboard</div>
-      <div class="hint">Comms Focal: Abu Nayeem Md Shakib</div>
+      <div>
+        <select id="monthSelect"></select>
+        <button id="viewDay">Day</button>
+        <button id="viewWeek">Week</button>
+        <button id="viewMonth">Month</button>
+        <button id="refreshBtn">Refresh</button>
+      </div>
     </div>
-    <div class="controls">
-      <select id="monthSelect"></select>
-      <button id="viewDay">Day</button>
-      <button id="viewWeek">Week</button>
-      <button id="viewMonth">Month</button>
-      <button id="refreshBtn">Refresh</button>
+    <div class="card">
+      <div id="gantt"></div>
+      <div class="legend">
+        <span><span class="sw pending"></span> Pending (0%)</span>
+        <span><span class="sw doing"></span> In progress</span>
+        <span><span class="sw done"></span> Completed (100%)</span>
+      </div>
     </div>
   </div>
-
-  <div id="stage"><div id="gantt"></div></div>
-
-  <div class="legend">
-    <span><span class="sw pending"></span>Pending (0%)</span>
-    <span><span class="sw doing"></span>In progress</span>
-    <span><span class="sw done"></span>Completed (100%)</span>
-  </div>
-
-  <div id="tooltip" class="tooltip"></div>
 
   <script>
-    /* ===== Supabase config (yours) ===== */
     const SUPABASE_URL = "https://wjfgntocqjtwaqamlbgc.supabase.co";
-    const SUPABASE_ANON_KEY =
-      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...";
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-    const state = { view: 'Week', monthKey: keyFromDate(new Date()) };
-    let gantt, tasksCache = [], tasksById = {};
+    const state = { view:'Week', monthKey:keyFromDate(new Date()) };
+    let gantt, tasksById = {};
 
     init();
 
@@ -100,36 +67,31 @@
     }
 
     function bindControls(){
-      monthSelect.onchange = () => { state.monthKey = monthSelect.value; render(); };
-      viewDay.onclick    = () => setView('Day');
-      viewWeek.onclick   = () => setView('Week');
-      viewMonth.onclick  = () => setView('Month');
-      refreshBtn.onclick = () => render();
+      monthSelect.onchange = ()=>{ state.monthKey = monthSelect.value; render(); };
+      viewDay.onclick = ()=>setView('Day');
+      viewWeek.onclick = ()=>setView('Week');
+      viewMonth.onclick = ()=>setView('Month');
+      refreshBtn.onclick = ()=>render();
+      window.addEventListener('resize', ()=>{ if(gantt) gantt.refresh(); });
     }
-    function setView(v){ state.view = v; if(gantt) gantt.change_view_mode(v); }
+    function setView(v){ state.view=v; if(gantt) gantt.change_view_mode(v); }
 
     function buildMonthPicker(){
-      const base = new Date(); base.setDate(1); monthSelect.innerHTML='';
-      for(let o=-2;o<=9;o++){
+      const base=new Date(); base.setDate(1); monthSelect.innerHTML='';
+      for(let o=-2;o<=6;o++){
         const d=new Date(base); d.setMonth(d.getMonth()+o);
         const key=keyFromDate(d);
         const opt=document.createElement('option');
-        opt.value=key;
-        opt.textContent=d.toLocaleString(undefined,{month:'long',year:'numeric'});
+        opt.value=key; opt.textContent=d.toLocaleString(undefined,{month:'long',year:'numeric'});
         if(key===state.monthKey) opt.selected=true;
         monthSelect.appendChild(opt);
       }
     }
     function keyFromDate(d){ return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`; }
-    function monthRangeFromKey(key){
-      const [y,m]=key.split('-').map(Number);
-      return { start:new Date(y,m-1,1), end:new Date(y,m,0,23,59,59,999) };
-    }
+    function monthRangeFromKey(key){ const [y,m]=key.split('-').map(Number); return { start:new Date(y,m-1,1), end:new Date(y,m,0,23,59,59,999) }; }
 
     async function fetchTasks(){
-      const { data, error } = await supabase.from('tasks')
-        .select('*')
-        .order('start_date',{ascending:true});
+      const { data, error } = await supabase.from('tasks').select('*').order('start_date',{ascending:true});
       if(error){ console.error(error); return []; }
       const { start, end } = monthRangeFromKey(state.monthKey);
       return (data||[]).filter(t => new Date(t.end_date||t.start_date)>=start && new Date(t.start_date)<=end);
@@ -137,89 +99,44 @@
 
     async function render(){
       const rows = await fetchTasks();
-      tasksCache = rows.map(r => ({
-        id: String(r.id),
-        name: r.title,
-        start: toYMD(r.start_date),
-        end: toYMD(r.end_date || r.start_date),
-        progress: Number(r.progress ?? 0),
-        notes: r.notes || ''
+      const tasks = rows.map(r=>({
+        id:r.id, name:r.title, start:toYMD(r.start_date), end:toYMD(r.end_date||r.start_date),
+        progress:Number(r.progress||0), dependencies:(r.dependencies||'').trim(), notes:r.notes||''
       }));
-      tasksById = Object.fromEntries(tasksCache.map(t => [t.id, t]));
-
+      tasksById=Object.fromEntries(tasks.map(t=>[String(t.id),t]));
       document.getElementById('gantt').innerHTML='';
-      gantt = new Gantt('#gantt', tasksCache, {
-        view_mode: state.view,
-        date_format: 'YYYY-MM-DD',
-        language:'en'
-      });
-
-      colorizeBars();   // <- locks your theme (no purple)
-      attachTooltip();  // hover/tap notes
+      gantt = new Gantt('#gantt', tasks, { view_mode:state.view, date_format:'YYYY-MM-DD' });
+      colorizeBars();
     }
 
-    // --- Color logic (fresh + simple) ---
     function colorizeBars(){
-      document.querySelectorAll('#gantt .bar-wrapper').forEach(w => {
-        const id = w.getAttribute('data-id');
-        const t = tasksById[id]; if(!t) return;
-        const bar  = w.querySelector('.bar');
-        const prog = w.querySelector('.bar-progress');
-        if(!bar || !prog) return;
-
-        const p = clamp(Number(t.progress || 0), 0, 100);
-
-        if(p === 0){
-          bar.setAttribute('fill', css('--pending'));
-          prog.setAttribute('fill','rgba(0,0,0,0)');
-        } else if(p >= 100){
-          bar.setAttribute('fill', css('--done-base'));
-          prog.setAttribute('fill', css('--done'));
-        } else {
-          bar.setAttribute('fill', css('--doing'));      // ash base
-          prog.setAttribute('fill', beigeRamp(p));       // deeper beige as % grows
-        }
+      document.querySelectorAll('#gantt .bar-wrapper').forEach(w=>{
+        const id=w.getAttribute('data-id'); const t=tasksById[id]; if(!t) return;
+        const bar=w.querySelector('.bar'); const prog=w.querySelector('.bar-progress');
+        if(!bar||!prog) return;
+        const p=Math.max(0,Math.min(100,Number(t.progress||0)));
+        if(p===0){ bar.setAttribute('fill',css('--pending')); prog.setAttribute('fill','rgba(0,0,0,0)'); }
+        else if(p>=100){ bar.setAttribute('fill',css('--done-base')); prog.setAttribute('fill',css('--done')); }
+        else { bar.setAttribute('fill',css('--doing')); prog.setAttribute('fill',beigeRamp(p)); }
       });
     }
 
-    // warm beige ramp (HSL) for overlay
+    // Beige ramp (1–99%)
     function beigeRamp(p){
-      const h = 38, s = 60;       // warm hue
-      const lStart = 92, lEnd = 45;
-      const l = lStart + (lEnd - lStart) * (p/100);
-      return `hsl(${h}, ${s}%, ${l}%)`;
+      const h=38, s=70; const lStart=90, lEnd=55;
+      const l=lStart+(lEnd-lStart)*(p/100);
+      return `hsl(${h},${s}%,${l}%)`;
     }
 
-    // --- Tooltip with notes ---
-    function attachTooltip(){
-      const tip = document.getElementById('tooltip');
-      document.querySelectorAll('#gantt .bar-wrapper').forEach(w => {
-        w.onmouseenter = () => {
-          const id = w.getAttribute('data-id');
-          const t = tasksById[id]; if(!t) return;
-          tip.innerHTML = `<strong>${escapeHtml(t.name)}</strong><br>${t.start} → ${t.end}<br>${t.progress}%${t.notes?`<br>${escapeHtml(t.notes)}`:''}`;
-          tip.style.display = 'block';
-        };
-        w.onmousemove = e => { tip.style.left = (e.pageX+12)+'px'; tip.style.top = (e.pageY-20)+'px'; };
-        w.onmouseleave = () => { tip.style.display = 'none'; };
-      });
-    }
-
-    // realtime refresh
     function subscribeRealtime(){
       supabase.channel('public:tasks')
-        .on('postgres_changes',{event:'*',schema:'public',table:'tasks'}, () => render())
+        .on('postgres_changes',{event:'*',schema:'public',table:'tasks'}, debounce(()=>{render();},300))
         .subscribe();
     }
 
-    // utils
     function toYMD(d){ const x=new Date(d); return `${x.getFullYear()}-${String(x.getMonth()+1).padStart(2,'0')}-${String(x.getDate()).padStart(2,'0')}`; }
     function css(v){ return getComputedStyle(document.documentElement).getPropertyValue(v).trim(); }
-    function clamp(v, lo, hi){ return Math.max(lo, Math.min(hi, v)); }
-    function escapeHtml(s){
-      return String(s).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c]));
-    }
-    function keyFromDate(d){ return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`; }
+    function debounce(fn,wait){ let t; return(...a)=>{clearTimeout(t); t=setTimeout(()=>fn.apply(this,a),wait);}; }
   </script>
 </body>
 </html>
